src/main/java/com/example/easywheelz/Errors/InvalidReservationError.java
package com.example.easywheelz.Errors;

public class InvalidReservationError extends RuntimeException {
    public InvalidReservationError(String errorMessage) {
        super(errorMessage);
    }
}